# agentdesk

./: .env.example  .gitignore  AGENTS.md  README.md  agentdesk.example.json  netlify.toml  opencode.json  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: keep-alive.yml
backend/: __init__.py  config.py  db.py
backend/agent/: __init__.py  booking.py  dispatch.py  followup.py  graph.py  invoicing.py  route.py  scheduling.py  supervisor.py  tools.py  workflows.py
backend/api/: main.py  route_map.py
backend/cli/: __init__.py  config.py  main.py  session.py  tools_display.py  tui.py
backend/mcp_servers/: __init__.py  google_calendar.py  google_maps.py  jobber.py  registry.py
backend/opencode_server/: __init__.py  manager.py  websocket_proxy.py
backend/security/: __init__.py  audit.py  auth.py  credentials_store.py  encryption.py
config/: schema.sql
config/migrations/: 002_provider_keys.sql
frontend/: netlify.toml  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/components/: ChatPanel.tsx  Dashboard.tsx  InvoicesPanel.tsx  ProfilePanel.tsx  RouteMapPanel.tsx  SchedulePanel.tsx  Sidebar.tsx
frontend/src/components/opencode/: OpenCodePanel.tsx  OpenCodeTerminal.tsx  ProvidersPanel.tsx  index.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
tests/: test_security.py  test_workflows.py
